--- a/src/component/Label.module.css
+++ b/src/component/Label.module.css
@@ -1,29 +1,71 @@
-.text {
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+    animation: pulse 1s linear infinite;
+}
+.loader:after {
+    content: '';
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    animation: scaleUp 1s linear infinite;
+}
+
+@keyframes scaleUp {
+    0% { transform: translate(-50%, -50%) scale(0) }
+    60% , 100% { transform: translate(-50%, -50%)  scale(1)}
+}
+@keyframes pulse {
+    0% , 60% , 100%{ transform:  scale(1) }
+    80% { transform:  scale(1.2)}
+}
+
+.container{
+    width: 100%;
+    text-align: center;
+    margin-top: 7px;
+}
+
+.textLoader {
+    margin-top: 20px;
+    color: black;
     font-size: 20px;
-    /*margin: 0 auto;*/
-    width: 580px;
-    height: 400px;
-    /*text-align: center*/
-    display: flex;
-    align-items: center;
 }
 
-span {
-
+.text {
+    background-color: #FFFFFF;
+    width: 560px;
+    height: 250px;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 20px;
+    /*line-height: 400px;*/
+    padding-top: 150px;
+    display: block;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-
-.container {
-
-   /* flex-direction: column;*/
-   /* justify-content: center;*/
-   /* align-items: center;*/
-   /* padding-top: 5px;*/
-   /* padding-left: 5px;*/
-   /* text-align: center;*/
-
+.img {
+    margin-top: 10px;
+    border-radius: 20px;
 }
-
-.top {
-
+.textSpan {
+    font-size: 40px;
+}
+.textSpanSuper{
+    font-size: 40px;
+    font-weight: bold;
 }
