--- a/src/pages/LayOut.module.css
+++ b/src/pages/LayOut.module.css
@@ -12,4 +12,24 @@
     top: -20px
 }
 
+.print {
+    position: absolute;
+    top: 10px;
+    right: 10%;
+    text-align: center;
+    border-radius: 0.5em;
+    color: #fff;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+    background-color: #cb11ab;
+    box-shadow:
+            0px 1.7px 2.2px rgba(0, 0, 0, 0.02),
+            0px 4px 5.3px rgba(0, 0, 0, 0.028),
+            0px 7.5px 10px rgba(0, 0, 0, 0.035),
+            0px 13.4px 17.9px rgba(0, 0, 0, 0.042),
+            0px 25.1px 33.4px rgba(0, 0, 0, 0.05),
+            0px 60px 80px rgba(0, 0, 0, 0.07);
+}
+
 
