--- a/src/pages/FirstPage.module.css
+++ b/src/pages/FirstPage.module.css
@@ -64,3 +64,17 @@ a {
 .button:active {
   transform: scale(1.01);
 }
+
+.dropdown {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.option {
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+  font-size: 40px;
+  cursor: pointer;
+}
