--- a/src/pages/StartPage.module.css
+++ b/src/pages/StartPage.module.css
@@ -30,3 +30,49 @@
     color: black;
     font-size: 20px;
 }
+
+/* @media print {
+    .pagin {
+        visibility: hidden;
+    }
+} */
+
+.print {
+    position: fixed;
+    top: 10px;
+    right: 10%;
+    text-align: center;
+    border-radius: 0.5em;
+    color: #fff;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+    background-color: #cb11ab;
+    box-shadow: 0px 1.7px 2.2px rgba(0, 0, 0, 0.02),
+      0px 4px 5.3px rgba(0, 0, 0, 0.028), 0px 7.5px 10px rgba(0, 0, 0, 0.035),
+      0px 13.4px 17.9px rgba(0, 0, 0, 0.042),
+      0px 25.1px 33.4px rgba(0, 0, 0, 0.05), 0px 60px 80px rgba(0, 0, 0, 0.07);
+  }
+
+  .pagin {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+  .btn {
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 0.5em;
+    color: #fff;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+    background-color: #cb11ab;
+    /* box-shadow: 0px 1.7px 2.2px rgba(0, 0, 0, 0.02),
+      0px 4px 5.3px rgba(0, 0, 0, 0.028), 0px 7.5px 10px rgba(0, 0, 0, 0.035),
+      0px 13.4px 17.9px rgba(0, 0, 0, 0.042),
+      0px 25.1px 33.4px rgba(0, 0, 0, 0.05), 0px 60px 80px rgba(0, 0, 0, 0.07); */
+  }
+  
