--- a/src/pages/FirstPage.module.css
+++ b/src/pages/FirstPage.module.css
@@ -43,10 +43,10 @@ a {
   text-align: center;
   background: #481173;
   color: #fff;
-  width: 100%;
+
   font-size: 30px;
   font-weight: 400;
-  margin-top: 40px;
+  margin: 20px auto;
   padding: 20px 0;
   display: block;
   border-radius: 0.5em;
@@ -54,6 +54,10 @@ a {
     0px 4px 5.3px rgba(0, 0, 0, 0.028), 0px 7.5px 10px rgba(0, 0, 0, 0.035),
     0px 13.4px 17.9px rgba(0, 0, 0, 0.042),
     0px 25.1px 33.4px rgba(0, 0, 0, 0.05), 0px 60px 80px rgba(0, 0, 0, 0.07);
+  width: 50%;
+}
+.button:hover{
+  background: #671d49;
 }
 
 .err {
@@ -77,4 +81,32 @@ a {
   border: none;
   font-size: 40px;
   cursor: pointer;
+}
+/* FirstPage.module.css */
+.tablecontainer {
+  overflow-x: auto;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.inputCell {
+  max-width: 200px; /* Устанавливаем максимальную ширину ячейки */
+  overflow: hidden; /* Обрезаем текст, если не помещается */
+}
+
+.main{
+  min-height: 30em;
 }
