--- a/src/pages/LayOut.module.css
+++ b/src/pages/LayOut.module.css
@@ -8,7 +8,7 @@
   border-radius: 24px 24px 0 0;
   position: relative;
   width: 100%;
-  background-color: #cccbc8;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   top: -20px;
 }
 
